// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`show display in progres when movie is been fetching 1`] = `
<div>
  Loading...
</div>
`;

exports[`show error when movie fetch has failed 1`] = `
<div>
  Error...
</div>
`;

exports[`show movie list when fetching movies 1`] = `
<div
  className="movie-list-container"
>
  <a
    className="movie-item"
    href="/movies/1"
    onClick={[Function]}
  >
    <img
      alt="Kabali"
      className="movie-thumbnail"
      src="https://s3.ap-south-1.amazonaws.com/twspicinemas/poster/kabali.jpg"
    />
    <h5
      className="name"
    >
      Kabali
    </h5>
    <p
      className="experiences"
    >
      RDX, Dolby Atmos, SUB
    </p>
  </a>
  <a
    className="movie-item"
    href="/movies/2"
    onClick={[Function]}
  >
    <img
      alt="Theri"
      className="movie-thumbnail"
      src="https://s3.ap-south-1.amazonaws.com/twspicinemas/poster/theri.jpg"
    />
    <h5
      className="name"
    >
      Theri
    </h5>
    <p
      className="experiences"
    >
      RDX, Dolby Atmos, SUB
    </p>
  </a>
  <a
    className="movie-item"
    href="/movies/3"
    onClick={[Function]}
  >
    <img
      alt="Banjo"
      className="movie-thumbnail"
      src="https://s3.ap-south-1.amazonaws.com/twspicinemas/poster/banjo.jpg"
    />
    <h5
      className="name"
    >
      Banjo
    </h5>
    <p
      className="experiences"
    >
      RDX 3D
    </p>
  </a>
  <a
    className="movie-item"
    href="/movies/4"
    onClick={[Function]}
  >
    <img
      alt="Suicide Squad"
      className="movie-thumbnail"
      src="https://s3.ap-south-1.amazonaws.com/twspicinemas/poster/suicide-squad.jpg"
    />
    <h5
      className="name"
    >
      Suicide Squad
    </h5>
    <p
      className="experiences"
    >
      Dolby Atmos, RDX 3D, SUB
    </p>
  </a>
  <a
    className="movie-item"
    href="/movies/5"
    onClick={[Function]}
  >
    <img
      alt="Namadhu"
      className="movie-thumbnail"
      src="https://s3.ap-south-1.amazonaws.com/twspicinemas/poster/namadhu.jpg"
    />
    <h5
      className="name"
    >
      Namadhu
    </h5>
    <p
      className="experiences"
    >
      RDX, SUB
    </p>
  </a>
  <a
    className="movie-item"
    href="/movies/6"
    onClick={[Function]}
  >
    <img
      alt="Pelli Chupulu"
      className="movie-thumbnail"
      src="https://s3.ap-south-1.amazonaws.com/twspicinemas/poster/pelli-chupulu.jpg"
    />
    <h5
      className="name"
    >
      Pelli Chupulu
    </h5>
    <p
      className="experiences"
    >
      RDX, SUB
    </p>
  </a>
  <a
    className="movie-item"
    href="/movies/7"
    onClick={[Function]}
  >
    <img
      alt="Pink"
      className="movie-thumbnail"
      src="https://s3.ap-south-1.amazonaws.com/twspicinemas/poster/pink.jpg"
    />
    <h5
      className="name"
    >
      Pink
    </h5>
    <p
      className="experiences"
    >
      RDX, SUB
    </p>
  </a>
  <a
    className="movie-item"
    href="/movies/8"
    onClick={[Function]}
  >
    <img
      alt="Remo"
      className="movie-thumbnail"
      src="https://s3.ap-south-1.amazonaws.com/twspicinemas/poster/remo.jpg"
    />
    <h5
      className="name"
    >
      Remo
    </h5>
    <p
      className="experiences"
    >
      Dolby Atmos, RDX, SUB
    </p>
  </a>
  <a
    className="movie-item"
    href="/movies/9"
    onClick={[Function]}
  >
    <img
      alt="Inferno"
      className="movie-thumbnail"
      src="https://s3.ap-south-1.amazonaws.com/twspicinemas/poster/inferno.jpg"
    />
    <h5
      className="name"
    >
      Inferno
    </h5>
    <p
      className="experiences"
    >
      Dolby Atmos, RDX, SUB
    </p>
  </a>
  <a
    className="movie-item"
    href="/movies/10"
    onClick={[Function]}
  >
    <img
      alt="Iron Man 1"
      className="movie-thumbnail"
      src="https://s3.ap-south-1.amazonaws.com/twspicinemas/poster/ironman1.jpg"
    />
    <h5
      className="name"
    >
      Iron Man 1
    </h5>
    <p
      className="experiences"
    >
      RDX, Dolby Atmos, SUB
    </p>
  </a>
  <a
    className="movie-item"
    href="/movies/11"
    onClick={[Function]}
  >
    <img
      alt="Iron Man 2"
      className="movie-thumbnail"
      src="https://s3.ap-south-1.amazonaws.com/twspicinemas/poster/ironman2.jpg"
    />
    <h5
      className="name"
    >
      Iron Man 2
    </h5>
    <p
      className="experiences"
    >
      RDX, Dolby Atmos, SUB
    </p>
  </a>
  <a
    className="movie-item"
    href="/movies/12"
    onClick={[Function]}
  >
    <img
      alt="Iron Man 3"
      className="movie-thumbnail"
      src="https://s3.ap-south-1.amazonaws.com/twspicinemas/poster/ironman3.jpg"
    />
    <h5
      className="name"
    >
      Iron Man 3
    </h5>
    <p
      className="experiences"
    >
      RDX, Dolby Atmos, SUB
    </p>
  </a>
  <a
    className="movie-item"
    href="/movies/13"
    onClick={[Function]}
  >
    <img
      alt="Avengers"
      className="movie-thumbnail"
      src="https://s3.ap-south-1.amazonaws.com/twspicinemas/poster/avengers.jpg"
    />
    <h5
      className="name"
    >
      Avengers
    </h5>
    <p
      className="experiences"
    >
      RDX, Dolby Atmos, SUB
    </p>
  </a>
  <a
    className="movie-item"
    href="/movies/14"
    onClick={[Function]}
  >
    <img
      alt="Thor"
      className="movie-thumbnail"
      src="https://s3.ap-south-1.amazonaws.com/twspicinemas/poster/thor.jpg"
    />
    <h5
      className="name"
    >
      Thor
    </h5>
    <p
      className="experiences"
    >
      RDX, Dolby Atmos, SUB
    </p>
  </a>
  <a
    className="movie-item"
    href="/movies/15"
    onClick={[Function]}
  >
    <img
      alt="Age of Ultron"
      className="movie-thumbnail"
      src="https://s3.ap-south-1.amazonaws.com/twspicinemas/poster/ageofultron.jpg"
    />
    <h5
      className="name"
    >
      Age of Ultron
    </h5>
    <p
      className="experiences"
    >
      RDX, Dolby Atmos, SUB
    </p>
  </a>
</div>
`;
